--- a/Classifying TEAM Terrestial Images.ipynb
+++ b/Classifying TEAM Terrestial Images.ipynb
@@ -868,7 +868,7 @@
    "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
-    "    styles = open('styles.css', 'r').read()\n",
+    "    styles = open('css/custom.css', 'r').read()\n",
     "    return HTML(\"<style>\"+styles+\"</style>\")\n",
     "css_styling()"
    ]
